// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-ack-event Renders \`create-ack-event\` with config data 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close=""
  >
    <div
      class="title"
    >
      <span>
        Ack
      </span>
    </div>
    <div
      class="text"
    >
      <div
        class="layout column"
      >
        <alarm-general-table-stub
          items="[object Object]"
        />
        <ack-event-form-stub
          form="[object Object]"
          hideackresources="true"
          isnoterequired="true"
        />
        <div
          class="v-input v-input--hide-details theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
              style="height: auto;"
            >
              <div
                class="v-input--radio-group__input"
                role="radiogroup"
              >
                <legend
                  class="v-label theme--light"
                  style="left: 0px; position: relative;"
                >
                  Actions required
                </legend>
                <div
                  class="v-radio theme--light v-item--active"
                >
                  <div
                    class="v-input--selection-controls__input"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate material-icons theme--light primary--text"
                    >
                      radio_button_checked
                    </i>
                    <input
                      aria-checked="true"
                      name="actionType"
                      role="radio"
                      type="radio"
                      value="0"
                    />
                    <div
                      class="v-input--selection-controls__ripple primary--text"
                    />
                  </div>
                  <label
                    class="v-label theme--light"
                    style="left: 0px; position: relative;"
                  >
                    Acknowledge
                  </label>
                </div>
                <div
                  class="v-radio theme--light"
                >
                  <div
                    class="v-input--selection-controls__input"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate material-icons theme--light"
                    >
                      radio_button_unchecked
                    </i>
                    <input
                      aria-checked="false"
                      name="actionType"
                      role="radio"
                      type="radio"
                      value="1"
                    />
                    <div
                      class="v-input--selection-controls__ripple"
                    />
                  </div>
                  <label
                    class="v-label theme--light"
                    style="left: 0px; position: relative;"
                  >
                    Acknowledge and associate ticket
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--text theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
        Cancel
        </span>
      </button>
      <button
        class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default"
        type="submit"
      >
        <span
          class="v-btn__content"
        >
        Submit
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`create-ack-event Renders \`create-ack-event\` with empty modal 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close=""
  >
    <div
      class="title"
    >
      <span>
        Ack
      </span>
    </div>
    <div
      class="text"
    >
      <div
        class="layout column"
      >
        <alarm-general-table-stub
          items="[object Object]"
        />
        <ack-event-form-stub
          form="[object Object]"
          hideackresources="true"
        />
        <div
          class="v-input v-input--hide-details theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot"
              style="height: auto;"
            >
              <div
                class="v-input--radio-group__input"
                role="radiogroup"
              >
                <legend
                  class="v-label theme--light"
                  style="left: 0px; position: relative;"
                >
                  Actions required
                </legend>
                <div
                  class="v-radio theme--light v-item--active"
                >
                  <div
                    class="v-input--selection-controls__input"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate material-icons theme--light primary--text"
                    >
                      radio_button_checked
                    </i>
                    <input
                      aria-checked="true"
                      name="actionType"
                      role="radio"
                      type="radio"
                      value="0"
                    />
                    <div
                      class="v-input--selection-controls__ripple primary--text"
                    />
                  </div>
                  <label
                    class="v-label theme--light"
                    style="left: 0px; position: relative;"
                  >
                    Acknowledge
                  </label>
                </div>
                <div
                  class="v-radio theme--light"
                >
                  <div
                    class="v-input--selection-controls__input"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate material-icons theme--light"
                    >
                      radio_button_unchecked
                    </i>
                    <input
                      aria-checked="false"
                      name="actionType"
                      role="radio"
                      type="radio"
                      value="1"
                    />
                    <div
                      class="v-input--selection-controls__ripple"
                    />
                  </div>
                  <label
                    class="v-label theme--light"
                    style="left: 0px; position: relative;"
                  >
                    Acknowledge and associate ticket
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--text theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
        Cancel
        </span>
      </button>
      <button
        class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default"
        type="submit"
      >
        <span
          class="v-btn__content"
        >
        Submit
        </span>
      </button>
    </div>
  </div>
</form>
`;
